--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
-spring:
-  application:
-    name: product
+# spring:
+#   application:
+#     name: product
   datasource:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
@@ -8,12 +8,9 @@ spring:
       url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
-#ribbon:
-#  eureka:
-#    enabled: true
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 env: dev
-name: wuhao2
+
