--- a/product.yml
+++ b/product.yml
@@ -1,6 +1,6 @@
-spring:
-  application:
-    name: product
+# spring:
+#   application:
+#     name: product
   datasource:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
